--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,6 +1,6 @@
 ## Zeridmuth
 # Planet
-planet.zeridmuth-zeridmuth.name = Zeridmuth
+planet.zeridmuth-zeridmuth.name = 44447-HD-b
 planet.zeridmuth-arvtom.name = Arvtom
 # Sectors
 sector.zeridmuth-a-new-beginning.name = A New Beginning
